# gihub-pr-poller

./: .github-tracker.yaml  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.agent/: .gitignore  .nav-config.json  DEVELOPMENT-README.md
.agent/sops/: release.md
.agent/system/: ARCHITECTURE.md  FEATURE-MATRIX.md  PR-CHECKLIST.md
.agent/tasks/: task-46958.md
.agent/tasks/archive/: task-38484.md
.claude/commands/: publish-brew.md
src/github_tracker/: __init__.py  __main__.py  app.py  config.py  deploy_tracker.py  github_client.py  jira.py  logging_config.py  models.py  pr_service.py  refresh.py  setup_wizard.py  state.py  theme.py
src/github_tracker/widgets/: __init__.py  header.py  pr_table.py  status_bar.py
tests/: conftest.py  test_app.py  test_app_grouping.py  test_config.py  test_deploy_tracker.py  test_github_client.py  test_jira.py  test_logging_config.py  test_models.py  test_pr_service.py  test_refresh.py  test_setup_wizard.py  test_state.py
tests/test_widgets/: test_header.py  test_pr_table.py  test_status_bar.py
